--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -13,7 +13,15 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from tensorflow.keras.layers import LSTM, Activation, Dense, Dropout, Input, Embedding, Bidirectional"
+    "from tensorflow.keras.layers import (\n",
+    "    LSTM,\n",
+    "    Activation,\n",
+    "    Dense,\n",
+    "    Dropout,\n",
+    "    Input,\n",
+    "    Embedding,\n",
+    "    Bidirectional,\n",
+    ")\n"
    ]
   },
   {
@@ -97,12 +105,12 @@
     }
    ],
    "source": [
-    "csv_path = os.path.join(os.getcwd(), '../data/spam.csv')\n",
-    "df = pd.read_csv(csv_path, delimiter=',', encoding='latin-1')\n",
-    "df.drop(['Unnamed: 2', 'Unnamed: 3', 'Unnamed: 4'],axis=1,inplace=True)\n",
-    "df.rename(columns={'v1':'label', 'v2':'text'}, inplace=True)\n",
-    "df['spam']=df['label'].apply(lambda x: 0 if x=='spam' else 1)\n",
-    "df.head()"
+    "csv_path = os.path.join(os.getcwd(), \"../data/spam.csv\")\n",
+    "df = pd.read_csv(csv_path, delimiter=\",\", encoding=\"latin-1\")\n",
+    "df.drop([\"Unnamed: 2\", \"Unnamed: 3\", \"Unnamed: 4\"], axis=1, inplace=True)\n",
+    "df.rename(columns={\"v1\": \"label\", \"v2\": \"text\"}, inplace=True)\n",
+    "df[\"spam\"] = df[\"label\"].apply(lambda x: 0 if x == \"spam\" else 1)\n",
+    "df.head()\n"
    ]
   },
   {
@@ -113,23 +121,29 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(list(df['text']), list(df['spam']), test_size=0.2, stratify=df['spam'], random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    list(df[\"text\"]),\n",
+    "    list(df[\"spam\"]),\n",
+    "    test_size=0.2,\n",
+    "    stratify=df[\"spam\"],\n",
+    "    random_state=42,\n",
+    ")\n",
     "\n",
     "VOCAB_SIZE = 1000\n",
     "MAX_LEN = 150\n",
     "EMBEDDING_DIM = 64\n",
     "\n",
-    "tokenizer=Tokenizer(num_words=VOCAB_SIZE,oov_token=\"SPL\")\n",
+    "tokenizer = Tokenizer(num_words=VOCAB_SIZE, oov_token=\"SPL\")\n",
     "tokenizer.fit_on_texts(X_train)\n",
     "\n",
-    "train_seq=tokenizer.texts_to_sequences(X_train)\n",
-    "train_pad=pad_sequences(train_seq, maxlen=MAX_LEN, truncating=\"post\")\n",
+    "train_seq = tokenizer.texts_to_sequences(X_train)\n",
+    "train_pad = pad_sequences(train_seq, maxlen=MAX_LEN, truncating=\"post\")\n",
     "\n",
-    "test_seq=tokenizer.texts_to_sequences(X_test)\n",
-    "test_pad=pad_sequences(test_seq,maxlen=MAX_LEN, truncating=\"post\")\n",
+    "test_seq = tokenizer.texts_to_sequences(X_test)\n",
+    "test_pad = pad_sequences(test_seq, maxlen=MAX_LEN, truncating=\"post\")\n",
     "\n",
-    "y_train=np.array(y_train)\n",
-    "y_test=np.array(y_test)"
+    "y_train = np.array(y_train)\n",
+    "y_test = np.array(y_test)\n"
    ]
   },
   {
@@ -199,7 +213,7 @@
     }
    ],
    "source": [
-    "inputs = Input(name='inputs', shape=[MAX_LEN])\n",
+    "inputs = Input(name=\"inputs\", shape=[MAX_LEN])\n",
     "x = Embedding(VOCAB_SIZE, EMBEDDING_DIM, input_length=MAX_LEN)(inputs)\n",
     "x = Bidirectional(LSTM(units=64, return_sequences=True))(x)\n",
     "x = Bidirectional(LSTM(units=64))(x)\n",
@@ -212,15 +226,20 @@
     "print(model.summary())\n",
     "\n",
     "early_callback = tf.keras.callbacks.EarlyStopping(\n",
-    "    monitor=\"val_loss\",\n",
-    "    patience=10,\n",
-    "    mode=\"auto\",\n",
-    "    restore_best_weights=True,\n",
-    "    verbose=1\n",
+    "    monitor=\"val_loss\", patience=10, mode=\"auto\", restore_best_weights=True, verbose=1\n",
     ")\n",
     "\n",
-    "model.compile(loss=\"binary_crossentropy\", optimizer='adam', metrics=[\"accuracy\"])\n",
-    "history = model.fit(train_pad, y_train, epochs=30, validation_data=(test_pad, y_test), callbacks=[early_callback], batch_size=32, use_multiprocessing=True, shuffle=True)"
+    "model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "history = model.fit(\n",
+    "    train_pad,\n",
+    "    y_train,\n",
+    "    epochs=30,\n",
+    "    validation_data=(test_pad, y_test),\n",
+    "    callbacks=[early_callback],\n",
+    "    batch_size=32,\n",
+    "    use_multiprocessing=True,\n",
+    "    shuffle=True,\n",
+    ")\n"
    ]
   },
   {
@@ -229,17 +248,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = os.path.join(os.getcwd(), '../checkpoints')\n",
+    "save_path = os.path.join(os.getcwd(), \"../checkpoints\")\n",
     "\n",
     "json_config = model.to_json()\n",
-    "with open(os.path.join(save_path, 'model_config.json'), 'w') as json_file:\n",
+    "with open(os.path.join(save_path, \"model_config.json\"), \"w\") as json_file:\n",
     "    json_file.write(json_config)\n",
-    "    \n",
+    "\n",
     "tokenizer_json = tokenizer.to_json()\n",
-    "with open(os.path.join(save_path, 'tokenizer.json'), 'w', encoding='utf-8') as json_file:\n",
+    "with open(\n",
+    "    os.path.join(save_path, \"tokenizer.json\"), \"w\", encoding=\"utf-8\"\n",
+    ") as json_file:\n",
     "    json_file.write(tokenizer_json)\n",
-    "        \n",
-    "model.save_weights(os.path.join(save_path, 'best_weights.h5'))"
+    "\n",
+    "model.save_weights(os.path.join(save_path, \"best_weights.h5\"))\n"
    ]
   }
  ],
