--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = os.path.join(os.getcwd(), \"../checkpoints\")\n",
+    "save_path = os.path.join(os.getcwd(), \"../flask_app/checkpoints\")\n",
     "\n",
     "json_config = model.to_json()\n",
     "with open(os.path.join(save_path, \"model_config.json\"), \"w\") as json_file:\n",
